# rust-hello-world

./: .gitignore  Cargo.toml  README.adoc  docker-compose.yml  requests.txt
.github/workflows/: build.yml
mysql/: Dockerfile  rust.sql
src/: customer_events.rs  customer_service.rs  event_publishing.rs  lib.rs  main.rs  mysql_util.rs
tests/: integration_tests.rs
