[package]
name = "hello_world"
version = "0.1.0"
authors = ["Chris Richardson <chris@chrisrichardson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mysql = "20.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
