[package]
name = "hello_world"
version = "0.1.0"
authors = ["Chris Richardson <chris@chrisrichardson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "*"

sqlx = { version = "0.5.1", features = [ "mysql", "runtime-async-std-native-tls" ] }
#async-std = { version = "1.6", features = [ "attributes" ] }

# tokio + rustls
#sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls" ] }
# async-std + native-tls
#sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }

serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
